tests/integration/commands/validate/SPEC-RELATION/04_TARGET_links_to_a_missing_SPEC-OBJECT/test.itest
RUN: %reqif validate %S/sample.reqif | filecheck %s --dump-input=fail

CHECK: warning: semantic error: schema error: A <SPEC-RELATION>'s <TARGET> contains a link to a non-existing <SPEC-OBJECT>: NON_EXISTING_UID
CHECK: Affected fragment:
CHECK: <SPEC-RELATION IDENTIFIER="_67JkkGyBEeuM1tJZu08zdg" LAST-CHANGE="2021-02-11T16:57:54.293+01:00">
CHECK: Validation complete with 0 errors, 0 schema issues found, 1 semantic issues found.
